--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -70,7 +70,7 @@
 }
 
 /* ================= MEDIA QUERIES (MEDIUM DEVICES) ================*/
-@media screen and (max-widht: 1024px) {
+@media screen and (max-width: 1024px) {
   .about__container {
     grid-template-columns: 1fr;
     gap: 0;
@@ -87,7 +87,7 @@
 }
 
 /* ================= MEDIA QUERIES (SMALL DEVICES) ================*/
-@media screen and (max-widht: 600px) {
+@media screen and (max-width: 600px) {
   .about__me {
     width: 65%;
     margin: 0 auto 3rem;
