--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -42,7 +42,7 @@
 }
 
 /* ================= MEDIA QUERIES (MEDIUM DEVICES) ================*/
-@media screen and (max-widht: 1024px) {
+@media screen and (max-width: 1024px) {
   .experience__container {
     grid-template-columns: 1fr;
   }
@@ -55,7 +55,7 @@
 }
 
 /* ================= MEDIA QUERIES (SMALL DEVICES) ================*/
-@media screen and (max-widht: 600px) {
+@media screen and (max-width: 600px) {
   .experience__container {
     gap: 1rem;
   }
