--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -60,16 +60,17 @@ header {
 }
 
 /* ================= MEDIA QUERIES (MEDIUM DEVICES) ================*/
-@media screen and (max-widht: 1024px) {
+@media screen and (max-width: 1024px) {
   header {
     height: 68vh;
   }
 }
 
 /* ================= MEDIA QUERIES (SMALL DEVICES) ================*/
-@media screen and (max-widht: 600px) {
+@media (max-width: 600px) {
   header {
     height: 100vh;
+    padding-top: 3rem;
   }
 
   .header__socials,
