--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -33,7 +33,7 @@
 }
 
 /* ================= MEDIA QUERIES (MEDIUM DEVICES) ================*/
-@media screen and (max-widht: 1024px) {
+@media screen and (max-width: 1024px) {
   .portfolio__container {
     grid-template-columns: 1fr 1fr;
     gap: 1.2rem;
@@ -41,7 +41,7 @@
 }
 
 /* ================= MEDIA QUERIES (SMALL DEVICES) ================*/
-@media screen and (max-widht: 600px) {
+@media screen and (max-width: 600px) {
   .portfolio__container {
     grid-template-columns: 1fr;
     gap: 1rem;
